--- a/style/main.css
+++ b/style/main.css
@@ -41,7 +41,7 @@
     display: block;
     min-height: 30px;
     width: 250px;
-    margin-bottom: 10px;
+    margin-top: 20px;
   }
   textarea {
     resize: vertical;
@@ -52,3 +52,4 @@
     font-weight: bold;
     cursor: pointer;
   }
+  
