--- a/style/style.css
+++ b/style/style.css
@@ -1,8 +1,10 @@
+
 .wrapper{
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  height: 100vh;
 }
 
 * {
@@ -52,4 +54,6 @@
     font-weight: bold;
     cursor: pointer;
   }
-  
+
+/* modalWindow */
+
