--- a/style/style.css
+++ b/style/style.css
@@ -1,59 +1,194 @@
-
-.wrapper{
+.wrapper {
+  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  height: 100vh;
 }
 
 * {
-    font-family: sans-serif;
-    box-sizing: border-box;
-  }
+  font-family: "Montserrat", sans-serif;
+  box-sizing: border-box;
+}
 
+/* //////////////////////// */
+/* table */
 
-  th, td {
-    font-size: 18px;
-    padding: 10px;
-  }
-  th {
-    background: #555;
-    color: #fff;
-  }
-  td {
-    background: #eee;
-  }
-  a {
-    text-decoration: none;
-    transition: 0.2s ease;
-    color: #3f75c5;
-  }
-  td:nth-child(7) > a {
-    color: #c22a2a;
-  }
-  a:hover {
-    opacity: 0.7;
-  }
-  p {
-    font-style: italic;
-  }
-  input, textarea, button {
-    padding: 10px;
-    display: block;
-    min-height: 30px;
-    width: 250px;
-    margin-top: 20px;
-  }
-  textarea {
-    resize: vertical;
-    height: 80px;
-  }
-  button {
-    text-transform: uppercase;
-    font-weight: bold;
-    cursor: pointer;
-  }
+table {
+  border-collapse: collapse;
+  background: #fff;
+  border: 2px solid #333;
+  border-radius: 10px;
+  margin: 20px auto;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+th {
+  background: #64f6d3;
+  color: #000;
+  padding: 10px;
+  text-align: center;
+  border: 2px solid #757575;
+}
+td {
+  padding: 10px;
+  text-align: center;
+  border: 2px solid #757575;
+}
+td:nth-child(7) > a {
+  color: #c22a2a;
+}
 
-/* modalWindow */
+/* //////////////////////// */
+/* titleLogo */
 
+.title-logo {
+  font-size: 45px;
+  font-weight: bolder;
+  color: #64f6d3;
+}
+
+/* //////////////////////// */
+/* link */
+
+.button-edit {
+  text-decoration: none;
+  font-weight: 700;
+  color: green;
+}
+
+.button-delete {
+  text-decoration: none;
+  font-weight: 700;
+  color: red;
+}
+
+/* //////////////////////// */
+/* buttonOpen */
+
+.buttonOpen {
+  background: #64f6d3;
+  color: #fff;
+  padding: 10px 30px;
+  border-radius: 10px;
+  transition: background-color 0.3s ease, transform 0.1s ease;
+}
+
+.buttonOpen:hover {
+  background: rgb(0, 194, 148);
+}
+
+.buttonOpen:active {
+  transform: translateY(2px);
+}
+
+/* //////////////////////// */
+/* popup */
+
+.popup_bg {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.6);
+  display: none;
+  overflow: hidden;
+}
+
+.popup {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  width: 700px;
+  padding: 20px;
+  background: #fff;
+  transform: translate(-50%, -50%);
+  z-index: 100;
+  border-radius: 10px;
+  display: none;
+}
+
+.close-popup {
+  position: absolute;
+  top: 30px;
+  right: 30px;
+}
+
+.svg_close {
+  cursor: pointer;
+  opacity: 0.4;
+
+  transition: opacity 0.3s ease;
+}
+.svg_close:hover {
+  opacity: 1;
+}
+
+.title-popup {
+  margin: 0 auto;
+  margin-bottom: 20px;
+  font-size: 25px;
+}
+.title-popup2 {
+  margin: 0 auto;
+  margin-bottom: 40px;
+  font-size: 25px;
+}
+
+.wrapper-top {
+  margin-top: 35px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 25px;
+}
+
+.wrapper_btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 20px;
+}
+
+.wrapper_popup {
+  display: flex;
+  justify-content: center;
+  column-gap: 50px;
+  margin-bottom: 20px;
+}
+
+.left_wrapper {
+  display: flex;
+  flex-direction: column;
+}
+
+.right_wrapper {
+  display: flex;
+  flex-direction: column;
+}
+
+/* //////////////////////// */
+/* input */
+
+input {
+  padding: 10px;
+  width: 100%;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  margin-bottom: 10px;
+  font-size: 16px;
+  color: #333;
+  background-color: #f9f9f9;
+  outline: none;
+  transition: border-color 0.3s ease;
+}
+
+input:focus {
+  border-color: #64f6d3;
+}
+
+input::placeholder {
+  color: #999;
+}
+
+/* popupEdit */
